feat: exibir relacionados e vincular etapa-usuario

--- a/src/app/layout/nav-mobile/nav-mobile.component.html
+++ b/src/app/layout/nav-mobile/nav-mobile.component.html
@@ -5,7 +5,7 @@
 >
     <ng-template #header>
         <div class="flex items-center gap-2">
-            <img src="assets/images/logo.svg" class="w-[25px] h-[25px] rounded-full m-1" alt="lobo-estoque-logo" draggable="false" />
+            <img src="assets/images/logo.svg" class="w-[25px] h-[25px] rounded-full m-1 hue-rotate-15 brightness-90" alt="lobo-estoque-logo" draggable="false" />
             <div class="flex flex-col">
                 <h1 class="font-bold text-[14px]">BTA IRRIGAÇÕES</h1>
                 <h2 class="font-normal text-[11px]">OS</h2>
