--- a/src/app/layout/sidenav/sidenav.component.html
+++ b/src/app/layout/sidenav/sidenav.component.html
@@ -3,7 +3,7 @@
         <button type="button" (click)="toggleCollapse()">
             <img 
                 src="assets/images/logo.svg" 
-                class="min-w-[2.9rem] w-[2.9em] min-h-[2.9rem] h-[2.9em] rounded-full p-2 brightness-90" 
+                class="min-w-[2.9rem] w-[2.9em] min-h-[2.9rem] h-[2.9em] rounded-full p-2 brightness-90 hue-rotate-15" 
                 alt="lobo-estoque-logo" 
                 draggable="false" 
             />
