--- a/src/app/pages/login/components/login-form/login-form.component.html
+++ b/src/app/pages/login/components/login-form/login-form.component.html
@@ -26,6 +26,6 @@
         type="submit" 
         label="Acessar"
         severity="primary"
-        styleClass="!px-10 mt-8"
+        styleClass="!px-10 mt-8 w-full"
     />
 </form>
