--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -11,7 +11,7 @@
             <h1 class="text-4xl lg:text-5xl font-bold text-gray-900">
                 Olá, <br> Bem vindo!
             </h1>
-            <p class="text-slate-600 font-light my-4">
+            <p class="font-light my-4">
                 Informe suas credenciais para ter acesso a plataforma.
             </p>
         </div>
@@ -20,11 +20,18 @@
     </div>
 
     <div
-        class="hidden lg:block hue-rotate-[25deg]"
+        class="hidden lg:block relative hue-rotate-[25deg]"
         style="
             background-image: url('assets/images/wel.avif');
             background-size: cover;
             background-position: bottom;
         "
-    ></div>
+    >
+        <img 
+            src="assets/images/bta.svg" 
+            alt="bta" 
+            width="100px" 
+            class="brightness-0 opacity-50 invert absolute bottom-5 right-5"
+        >
+    </div>
 </div>
