--- a/src/app/pages/user-management/user-list/user-list.component.html
+++ b/src/app/pages/user-management/user-list/user-list.component.html
@@ -7,7 +7,7 @@
       <h1 class="font-semibold text-lg text-gray-700">Listagem de usuários</h1>
     </div>
     
-    <p-button label="Cadastrar" (onClick)="redirectToUserForm()" icon="pi pi-plus text-xs" size="small" />
+    <p-button label="Novo usuário" (onClick)="redirectToUserForm()" icon="pi pi-plus text-xs" size="small" />
   </div>
 
   <p-table
