--- a/src/app/pages/cliente-management/cliente-list/cliente-list.component.html
+++ b/src/app/pages/cliente-management/cliente-list/cliente-list.component.html
@@ -1,6 +1,6 @@
 <app-header title="Clientes" />
 
-<div class="p-5 md:p-10 rounded-md">
+<div class="p-5 md:p-10">
   <div class="flex items-center gap-3 mb-6 md:mb-0">
     <div class="w-1 h-5 bg-blue-500"></div>
     <h1 class="font-semibold text-lg text-gray-700">Listagem de clientes</h1>
@@ -30,7 +30,7 @@
           />
         </p-iconfield>
 
-        <p-button label="Cadastrar" (onClick)="redirectToForm()" icon="pi pi-plus text-xs" size="small" />
+        <p-button label="Novo cliente" (onClick)="redirectToForm()" icon="pi pi-plus text-xs" size="small" />
       </div>
     </ng-template>
     <ng-template #header>
